# ITMO-KT

./: .gitignore  README.md
Algorithms/: README.md
Algorithms/1.Sorts,Heap,Binsearch/: Diploms.java  GladeOfFirewood.java  NumberOfInversions.java
Algorithms/2.Stack,Queue,SNM/: Astrograd.java  PostfixNotation.java
Algorithms/3.Dynamic/: LargestIncreasingSubsequence.java  TurtleAndCoins.java
Algorithms/4.SearchTree/: Kriptography.cpp  RMQ2.cpp  RSQ.java  SparseTables.cpp  Stars.java  UnRMQ.java
Algorithms/5.SegmentTree/: BalancedTree.java  OhRoads.java  SimpleBinSearchTree.java  SumAgain.java
Algorithms/6/: B.java  E.cpp  G.cpp  H.cpp  L.cpp  M.cpp
Algorithms/FirstYear/: README.md
Algorithms/SecondYear/: README.md
Algorithms/SecondYear/4.Matching/: A.cpp  (+6 more)
Algorithms/SecondYear/5.Flows/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp
C LAB/LAB 1/: Encoding.c  README.md
C LAB/LAB 2/: QuickSort.c  README.md
C LAB/Lab 3/: README.md  main.c
C LAB/Lab 4/: README.md  main.cpp
Clojure/: README.md  expression(11-12).clj
Clojure HM/: README.md  expression(10).clj  expression(11).clj  linear.clj
Data-Analysis/DA-Lab1/: Lab_1.ipynb
Data-Analysis/DA-Lab2/: Lab_2.ipynb
Data-Analysis/DA-Lab3/: Lab_3.ipynb
Data-Analysis/DA-Lab4/: Lab_4.ipynb  Test.ipynb
Data-Analysis/DA-Lab5/: Lab_5.ipynb  conf.yaml
Data-Analysis/DA-Lab6/: Lab-6.ipynb
Discrete Math/Laboratory work on state machines/: B.java  C.java  E.java  F.java  G.java
FP(Haskell)/: README.md  stack.yaml
FP(Haskell)/hw0/: README.md  hw0.cabal
FP(Haskell)/hw1/: README.md  hw1.cabal
FP(Haskell)/hw1/app/: Main.hs
FP(Haskell)/hw1/src/HW1/: T1.hs  T3.hs  T5.hs  T7.hs
FP(Haskell)/hw2/: README.md  hw2.cabal  package.yaml
FP(Haskell)/hw3/: README.md  hw3.cabal
FP(Haskell)/hw3/app/: Main.hs
FP(Haskell)/hw3/src/HW3/: Base.hs  Helper.hs  Pretty.hs
FP(Haskell)/hw3/src/HW3/Types/: String.hs
FP(Haskell)/hw4/: LICENSE  README.md  hw4.cabal
FP-Haskell/hw3/: hw3.cabal
Frontend/java-script/: package.json  pbql.js  robbery.js  subscribers.js  warmup.js  wedding.js
JS/: README.md  functionalExpression.js  objectExpression.js
Java HM/: README.md
Java HM/1.3/: Main.java
Java HM/2.1/: README.md
Java HM/2.2/: README.md
Java HM/2.3/: README.md
Java HM/FastScanner/: FastScanner.java
Java HM/Java. North-Western Russia Regional Contest - 2019/: JusttheLastDigit.java  ManagingDifficulties.java
Java HW/FirstYear/: README.md
Java HW/SecondYear/: README.md
Js HM/: README.md  objectExpression.js
Js HM/1/: README.md  functionalExpression.js
Js HM/2/: README.md
LAB on Python/: README.md
LAB on Python/lab2/: lab2.py
LAB on Python/lab3/: lab3.py
MPP/fine-grained-bank-NelosG/: build.gradle.kts
MPP/hash-table-NelosG/: README.md
MPP/lamport-lock-fail-NelosG/: execution
MPP/msqueue-NelosG/: pom.xml
MPP/possible-executions-analysis-NelosG/: solution.txt
MPP/stack-elimination-NelosG/: pom.xml
MPP/universal-construction-NelosG/: build.gradle.kts
Machine Learning/CF/: A_Cross_Validation.cpp  B_F_Score.cpp  C_Nonparametric_Regression.cpp  E_Naive_Bayes.cpp  F_Decision_Tree.cpp  G_Logical_Expression.cpp  H_Matrix_Function.java  I_CNN.java  J_LSTM.java
Neuro/: README.md
Neuro/Cuda/: README.md
Neuro/FirtsTry/: Main.cpp  Net.cpp  Net.h  Neuron.cpp  Neuron.h  README.md
OS-lite/Lab-1/: 1-Max3.sh  10-ManBash.sh  11-ExtraTask.sh  2-Test.sh  3-Menu.sh  4-CheckDirectory.sh  5-InfoLog.sh  6-FullLog.sh  7-Emails.sh  8-UID.sh  9-CountString.sh
OS-lite/Lab-2/: 1-CountProc.sh  2-PidBySbin.sh  3-LastPid.sh  4-CPUBurst.sh  5-CPUBurstPPid.sh  6-LargestProc.sh  7-TimerProc.sh
OS-lite/Lab-3/: Task1.sh  Task2.sh  Task3.sh  Task4-Core.sh  Task4-Process.sh  Task5-Generator.sh  Task5-Handler.sh  Task6-Generator.sh  Task6-Handler.sh  TaskExtra-Generator.sh  TaskExtra-Handler.sh
OS-lite/Lab-4/: Task1-RmTrash.sh  Task2-UnTrash.sh  Task3-BackUp.sh  Task4-UpBack.sh
OS-lite/Lab-6/: 1.1.bat  1.2.bat  2.1.bat  3.1.bat  4.1.bat
Prolog/: tree-map.pl
Prolog HM/: primes.pl
Python LAB/: README.md
Python LAB/lab1/: lab1.py
Translations Methods/FourthLab/: Task.html  pom.xml
Translations Methods/SecondLab/: MetTrans.txt  README.md  pom.xml
Translations Methods/ThirdLab/: pom.xml
WAV/: MainWav.cpp  WAV.cpp  WAV.h
database-course/CR/: DDL.sql  Data.sql
database-course/HWs/: q.sql
database-course/tasks/: 1-c.sql  1-g.sql  1-l.sql  1-m.sql  1-p.sql  1-s.sql  2-i.sql  2-q.sql  3.1-i.sql  3.1-q.sql  3.2-i.sql  3.2-q.sql  3.3-i.sql  3.3-q.sql
parallel-algorithms/: README.md
parallel-algorithms/ParallelBFS/: CMakeLists.txt  README.md  bfs-parallel.cpp  bfs-sequintal.cpp  bfs.h  main.cpp  run.cmd  run.sh
parallel-algorithms/ParallelBFS/common/: commons.h  parallel.cpp  sequintal.cpp
parallel-algorithms/ParallelBFS/graph/: graph.h
parallel-algorithms/QuickSort/: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  main.cpp  parallel.cpp  parallel_v2.cpp  quick_sort.h  run.cmd  run.sh  sequintal.cpp  standard.cpp
parallel-algorithms/QuickSort/runConfigurations/: quick_sort.run.xml
parallel-algorithms/Scan/: CMakeLists.txt  README.md  main.cpp  parallel.cpp  parallel_v2.cpp  scan.h  sequintal.cpp  sequintal_v2.cpp
parallel-algorithms/Scan/.run/: Scan.run.xml
(+902 files in other folders)
