name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/NelosG/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Gleb Pushkarev
maintainer:          gleb.pushkarev@gmail.com
copyright:           2021 Gleb Pushkarev

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  exposed-modules:
      HW1.T1
      HW1.T2
      HW1.T3
      HW1.T4
      HW1.T5
      HW1.T6
      HW1.T7
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
